cluster-wide-k8s/kube-prometheus-stack/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
