cluster-wide-k8s/kube-prometheus-stack/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: kube-prometheus-stack
spec:
  routes:
    - kind: Rule
      match: Host(`grafana.prod.rizexor.com`)
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
  tls:
    secretName: prod-rizexor-com-tls
    # domains:
    # - main: 'fossindia.ovh'
    #   sans:
    #   - '*.fossindia.ovh'
    #
